<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".requests.AddTheatreActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/create_theatre"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/enter_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/enter_address" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/background_button"
                android:text="@string/create"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/prgCreate"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:theme="@style/PurpleProgressBar"
                android:visibility="visible" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>