<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".requests.TheatreActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/find_theatres"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/enter_find_string" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFind"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/background_button"
                android:text="@string/Find"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/prgFind"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:theme="@style/PurpleProgressBar"
                android:visibility="visible" />

        </FrameLayout>

        <ListView
            android:id="@+id/findResultList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            tools:listitem="@layout/theatre_cell" />

    </LinearLayout>

</LinearLayout>